--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.4",
-    "axios": "^1.6.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^14.0.0",
+    "axios": "^1.6.0",
     "pinia": "^2.1.7"
   }
 }
-
